Fixing z-index for placement

--- a/css/signup.css
+++ b/css/signup.css
@@ -54,7 +54,7 @@
     height: 573px;
     left: 0px;
     top: 271px;
-    z-index: 1000;
+    z-index: 800;
 }
 
 .sign-up-title {
